--- a/dinner/dinner.html
+++ b/dinner/dinner.html
@@ -3,17 +3,31 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Dinner Recipe</title>
+  <title>Dinner Recipes</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <section>
-    <section class="dinner-header">
-    <h1>Dinner Recipes</h1>
-    <nav class="main-nav">
-      <a href="/breakfast/breakfast.html" class="link">Breakfast</a>
-      <a href="/lunch/lunch.html" class="link">Lunch</a>
+  <header class="dinner-main">
+    <h1 class="dinner-main-header">Dinner Recipes</h1>
+    <nav class="dinner-nav">
+      <a href="/index.html">Home</a>
+      <a href="/breakfast/breakfast.html">Breakfast</a>
+      <a href="/lunch/lunch.html">Lunch</a>
     </nav>
+  </header>
+  <section class="dinner-recipes-section">
+    <h3  class="dinner-recipes-header" > Fancy dinner Recipes</h3>
+    <p>With these recipes, you are sure to impress anyone you make them for!</p>
   </section>
-
+  <section class="dinner-recipes-container">
+      <div class="dinner-recipes">
+        <a href ="/dinner/alfredo.html">Alfredo Recipe</a>
+        <a href ="/dinner/carbonara.html">Carbonara Recipe</a>
+        <a href ="/dinner/steak.html">Steak Recipe</a>
+      </div>
+  </section>
+  <footer class="dinner-page-footer">
+    Flexbox Practice 2024. 
+  </footer>
 </body>
 </html>
