--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   </section>
   <div class="website-section">
     <h3>Breakfast</h3>
-    <section breakfast-section>
+    <section class="breakfast-section">
       <a href="/breakfast/waffles.html" class="waffles">Waffles</a>
       <a href="/breakfast/quiche.html" class="quiche">Quiche Loraine</a>
       <a href="/breakfast/scrambledeggs.html" class="eggs">Scrambled Eggs</a>
@@ -29,14 +29,14 @@
     <h3>Lunch</h3>
       <section class="lunch-section">
     <a href="lunch/chicken-sandwich.html" class="mcchicken">Copycat McChicken Sandwich</a>
-    <a href="spaghetti.html" id="spaghetti">Spaghetti</a>
-    <a href="tacos.html" id="tacos">Tacos</a>
+    <a href="spaghetti.html" class="spaghetti">Spaghetti</a>
+    <a href="tacos.html" class="tacos">Tacos</a>
   </section>
   <h3>Dinner</h3>
   <section class="dinner-section">
-    <a href="dinner/alfredo.html" id="alfredo">Shrimp Linguine Dinner</a>
-    <a href="dinner/carbonara.html" id="carbonara">Carbonara Dinner</a>
-    <a href="dinner/steak.html" id="steak">Steak Dinner</a>
+    <a href="dinner/alfredo.html"class="alfredo">Shrimp Linguine Dinner</a>
+    <a href="dinner/carbonara.html" class="carbonara">Carbonara Dinner</a>
+    <a href="dinner/steak.html" class="steak">Steak Dinner</a>
   </section>
   </div>
 
