--- a/lunch/lunch.html
+++ b/lunch/lunch.html
@@ -3,18 +3,31 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Dinner Tabs</title>
+  <title>Dinner Recipes</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <section>
-    <section class="lunch-header">
-    <h1>Lunch</h1>
+  <header class="lunch-main">
+    <h1 class="lunch-main-header">Lunch Recipes</h1>
     <nav class="lunch-nav">
       <a href="/index.html">Home</a>
-      <a href="/breakfast/breakfast.html" class="link">Breakfast</a>
-      <a href="/dinner/dinner.html" class="link">Dinner</a>
+      <a href="/breakfast/breakfast.html">Breakfast</a>
+      <a href="/dinner/dinner.html">Dinner</a>
     </nav>
+  </header>
+  <section class="dinner-recipes-section">
+    <h3  class="dinner-recipes-header" > Fun Lunch Recipes</h3>
+    <p>With these recipes, you are sure to impress anyone you make them for!</p>
   </section>
-
+  <section class="lunch-recipes-container">
+      <div class="lunch-recipes">
+        <a href ="/lunch/spaghetti.html">Spaghetti Recipe</a>
+        <a href ="/lunch/tacos.html">Tacos Recipe</a>
+        <a href ="/lunch/chicken-sandwich.html">Copycat McChicken</a>
+      </div>
+  </section>
+  <footer class="lunch">
+    Flexbox Practice 2024. 
+  </footer>
 </body>
 </html>
