here are the current changes to the code

--- a/breakfast/breakfast.html
+++ b/breakfast/breakfast.html
@@ -20,30 +20,37 @@
     <p>With these recipes, you are sure to impress anyone you make them for!</p>
   </section>
   <section class="breakfast-recipes-container">
-      <div class="breakfast-card">
-        <h3>Quiche Recipe</h3>
-        <div class="breakfast-card-image">
-          <img src="/images/quiche1.jpg" alt="image of a quiche" height="300px" width="300px">
-          <button class="button">
-            <a href ="/breakfast/quiche.html">Quiche Recipe</a>
-          </button>
-        </div>
-        <div class="breakfast-card">
-          <h3>Scrambled Eggs Recipe</h3>
-          <div class="breakfast-card-image">
-            <img src="/images/scrambledeggs.jpg" alt="image of a scrambled eggs" height="300px" width="300px">
-            <button class="button">
-              <a href ="/breakfast/scrambledeggs.html">Click here for recipe</a>
-            </button>
-          </div>
-          <div class="breakfast-card">
-            <h3>Waffle recipe</h3>
-            <div class="breakfast-card-image">
-              <img src="/images/waffles.jpg" alt="image of a waffles" height="300px" width="300px">
-              <button class="button">
-                <a href ="/breakfast/waffles.html">Click for recipe</a>
-              </button>
-            </div>
+    <div class="breakfast-card">
+      <h3 class="breakfast-card-header">Scrambled Eggs Recipe</h3>
+      <div class="breakfast-image-container">
+        <img src="/images/scrambledeggs.jpg" alt="Picture of Scrambled Eggs" height="300px" width="300px" >
+      </div>
+      <button class="button">
+        <a href="/breakfast/scrambledeggs.html">Click here for recipe</a>
+      </button>
+    </div>
+  </section>
+  <section class="breakfast-recipes-container">
+    <div class="breakfast-card">
+      <h3 class="breakfast-card-header">Waffles Recipe</h3>
+      <div class="breakfast-image-container">
+        <img src="/images/waffles.jpg" alt="Picture of a stack of waffles" height="300px" width="300px" >
+      </div>
+      <button class="button">
+        <a href="/breakfast/waffles.html">Click here for recipe</a>
+      </button>
+    </div>
+  </section>
+  <section class="breakfast-recipes-container">
+    <div class="breakfast-card">
+      <h3 class="breakfast-card-header"> Quiche Lorraine Recipe</h3>
+      <div class="breakfast-image-container">
+        <img src="/images/quiche1.jpg" alt="Picture of a Quiche Lorraine" height="300px" width="300px" >
+      </div>
+      <button class="button">
+        <a href="/breakfast/quiche.html">Click here for recipe</a>
+      </button>
+    </div>
   </section>
   <footer class="breakfast-page-footer">
     Flexbox Practice 2024. 
