--- a/dinner/dinner.html
+++ b/dinner/dinner.html
@@ -19,13 +19,45 @@
     <h3  class="dinner-recipes-header" > Fancy dinner Recipes</h3>
     <p>With these recipes, you are sure to impress anyone you make them for!</p>
   </section>
+
   <section class="dinner-recipes-container">
-      <div class="dinner-recipes">
-        <a href ="/dinner/alfredo.html">Alfredo Recipe</a>
-        <a href ="/dinner/carbonara.html">Carbonara Recipe</a>
-        <a href ="/dinner/steak.html">Steak Recipe</a>
+    <div class="dinner-card">
+      <h3 class="dinner-card-header">Fettuccine Alfredo Recipe</h3>
+      <div class="dinner-image-container">
+        <img src="/images/scrambledeggs.jpg" alt="Picture of a plate of Spaghetti" height="300px" width="300px" >
       </div>
+      <button class="button">
+        <a href="/dinner/alfredo.html">Click here for recipe</a>
+      </button>
+    </div>
   </section>
+
+
+  <section class="lunch-recipes-container">
+    <div class="lunch-card">
+      <h3 class="lunch-card-header">Carbonara Dish Recipe</h3>
+      <div class="lunch-image-container">
+        <img src="/images/scrambledeggs.jpg" alt="Picture of a plate of Spaghetti" height="300px" width="300px" >
+      </div>
+      <button class="button">
+        <a href="/dinner/carbonara.html">Click here for recipe</a>
+      </button>
+    </div>
+  </section>
+
+  
+  <section class="lunch-recipes-container">
+    <div class="lunch-card">
+      <h3 class="lunch-card-header">Steak Dinner</h3>
+      <div class="lunch-image-container">
+        <img src="/images/scrambledeggs.jpg" alt="Picture of a plate of Spaghetti" height="300px" width="300px" >
+      </div>
+      <button class="button">
+        <a href="/dinner/steak.html">Click here for recipe</a>
+      </button>
+    </div>
+  </section>
+
   <footer class="dinner-page-footer">
     Flexbox Practice 2024. 
   </footer>
