--- a/lunch/lunch.html
+++ b/lunch/lunch.html
@@ -15,17 +15,48 @@
       <a href="/dinner/dinner.html">Dinner</a>
     </nav>
   </header>
-  <section class="dinner-recipes-section">
-    <h3  class="dinner-recipes-header" > Fun Lunch Recipes</h3>
+  <section class="lunch-recipes-section">
+    <h3  class="lunch-recipes-header" > Fun Lunch Recipes</h3>
     <p>With these recipes, you are sure to impress anyone you make them for!</p>
   </section>
+  
   <section class="lunch-recipes-container">
-      <div class="lunch-recipes">
-        <a href ="/lunch/spaghetti.html">Spaghetti Recipe</a>
-        <a href ="/lunch/tacos.html">Tacos Recipe</a>
-        <a href ="/lunch/chicken-sandwich.html">Copycat McChicken</a>
+    <div class="lunch-card">
+      <h3 class="lunch-card-header">Spaghetti Recipe</h3>
+      <div class="lunch-image-container">
+        <img src="/images/scrambledeggs.jpg" alt="Picture of a plate of Spaghetti" height="300px" width="300px" >
       </div>
+      <button class="button">
+        <a href="/lunch/spaghetti.html">Click here for recipe</a>
+      </button>
+    </div>
   </section>
+
+
+  <section class="lunch-recipes-container">
+    <div class="lunch-card">
+      <h3 class="lunch-card-header">Easy Tacos</h3>
+      <div class="lunch-image-container">
+        <img src="/images/scrambledeggs.jpg" alt="Picture of a plate of Tacos" height="300px" width="300px" >
+      </div>
+      <button class="button">
+        <a href="/lunch/tacos.html">Click here for recipe</a>
+      </button>
+    </div>
+  </section>
+
+  <section class="lunch-recipes-container">
+    <div class="lunch-card">
+      <h3 class="lunch-card-header">Copy Cat McChicken</h3>
+      <div class="lunch-image-container">
+        <img src="/images/scrambledeggs.jpg" alt="Picture of a McChicken" height="300px" width="300px" >
+      </div>
+      <button class="button">
+        <a href="/lunch/chicken-sandwich.html">Click here for recipe</a>
+      </button>
+    </div>
+  </section>
+
   <footer class="lunch">
     Flexbox Practice 2024. 
   </footer>
