Finished spaghetti lunch page and fixed broken links from home to lunch recipes. Additionally, updated different titles for tacos and spaghetti

--- a/index.html
+++ b/index.html
@@ -29,14 +29,14 @@
     <h3>Lunch</h3>
       <section class="lunch-section">
     <a href="lunch/chicken-sandwich.html" class="mcchicken">Copycat McChicken Sandwich</a>
-    <a href="spaghetti.html" class="spaghetti">Spaghetti</a>
-    <a href="tacos.html" class="tacos">Tacos</a>
+    <a href="/lunch/spaghetti.html" class="spaghetti"> Baked Spaghetti</a>
+    <a href="/lunch/tacos.html" class="tacos"> Carne Asada Tacos</a>
   </section>
   <h3>Dinner</h3>
   <section class="dinner-section">
-    <a href="dinner/alfredo.html"class="alfredo">Shrimp Linguine Dinner</a>
-    <a href="dinner/carbonara.html" class="carbonara">Carbonara Dinner</a>
-    <a href="dinner/steak.html" class="steak">Steak Dinner</a>
+    <a href="/dinner/alfredo.html"class="alfredo">Shrimp Linguine Dinner</a>
+    <a href="/dinner/carbonara.html" class="carbonara">Carbonara Dinner</a>
+    <a href="/dinner/steak.html" class="steak">Steak Dinner</a>
   </section>
   </div>
 
