--- a/lunch/lunch.html
+++ b/lunch/lunch.html
@@ -35,7 +35,7 @@
 
   <section class="lunch-recipes-container">
     <div class="lunch-card">
-      <h3 class="lunch-card-header">Easy Tacos</h3>
+      <h3 class="lunch-card-header"> Carne Asada Tacos</h3>
       <div class="lunch-image-container">
         <img src="/images/scrambledeggs.jpg" alt="Picture of a plate of Tacos" height="300px" width="300px" >
       </div>
