--- a/lunch/spaghetti.html
+++ b/lunch/spaghetti.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Spaghetti Recipe</title>
+  <link rel="stylesheet" href="lunch.css">
 </head>
 <body>
 <!----Header----->
@@ -81,20 +82,28 @@
   <p class="spaghetti-directions-blurb">This waffle recipe is the only one you'll need to make homemade mchickens at home to save money. These make a great lunch or dinner or even after a night out meal. </p>
   <p class="spaghetti-step-label">Step 1</p>
   <p class="spaghetti-step-description">Gather all ingredients. Preheat the oven to 350 degrees F (175 degrees C). Lightly grease a 9x13-inch baking dish.</p>
+  <img src="/images/spaghettiingredient1.jpg" alt="picture of raw spaghetti ingredients">
   <p class="spaghetti-step-label">Step 2</p>
   <p class="spaghetti-step-description">Bring a large pot of lightly salted water to a boil. Cook spaghetti in boiling water, stirring occasionally, until tender but firm to the bite, about 12 minutes. Drain. </p>
+  <img src="/images/spaghettiingredient2.jpg" alt="picture of spaghetti ingredients">
   <p class="spaghetti-step-label">Step 3</p>
   <p class="spaghetti-step-description">Meanwhile, heat a large skillet over medium heat. Cook and stir beef and onion in the hot skillet until meat is browned and onion is soft and translucent, about 5 to 7 minutes.</p>
+  <img src="/images/spaghettiingredient3.jpg" alt="picture of spaghetti ingredients">
   <p class="spaghetti-step-label">Step 4</p>
   <p class="spaghetti-step-description">Drain excess oil from the pan; stir in spaghetti sauce and seasoned salt.</p>
+  <img src="/images/spaghettiingredient4.jpg" alt="picture of spaghetti ingredients">
   <p class="spaghetti-step-label">Step 5</p>
   <p class="spaghetti-step-description">Whisk eggs, Parmesan, and butter in a large bowl. Add spaghetti and toss to coat.</p>
+  <img src="/images/spaghettiingredient5.jpg" alt="picture of spaghetti ingredients">
   <p class="spaghetti-step-label">Step 6</p>
   <p class="spaghetti-step-description">Place 1/2 of the spaghetti mixture in the prepared baking dish. Top with 1/2 of the cottage cheese, 2 cups mozzarella, and 1/2 of the meat sauce. Repeat layers. Cover with aluminum foil.</p>
+  <img src="/images/spaghettiingredient6.jpg" alt="picture of spaghetti ingredients">
   <p class="spaghetti-step-label">Step 7</p>
   <p class="spaghetti-step-description">Bake in the preheated oven for 40 minutes. Remove the foil and sprinkle with remaining 1 cup mozzarella.</p>
+  <img src="/images/spaghettiingredient7.jpg" alt="picture of spaghetti ingredients">
   <p class="spaghetti-step-label">Step 8</p>
   <p class="spaghetti-step-description">Continue to bake until cheese is melted and lightly browned, 20 to 25 minutes.</p>
+  <img src="/images/spaghettiingredient8.jpg" alt="picture of spaghetti ingredients">
 </div>
 </section>
 <footer class="spaghetti-footer">
