finished lunch page

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <h3>Lunch</h3>
       <section class="lunch-section">
     <a href="lunch/chicken-sandwich.html" class="mcchicken">Copycat McChicken Sandwich</a>
-    <a href="/lunch/spaghetti.html" class="spaghetti"> Baked Spaghetti</a>
+    <a href="lunch/spaghetti.html" class="spaghetti"> Baked Spaghetti</a>
     <a href="/lunch/tacos.html" class="tacos"> Carne Asada Tacos</a>
   </section>
   <h3>Dinner</h3>
