--- a/lunch/lunch.html
+++ b/lunch/lunch.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Dinner Recipes</title>
-  <link rel="stylesheet" href="style.css">
+  <title>Lunch Recipes</title>
+  <link rel="stylesheet" href="/style.css">
 </head>
 <body>
   <header class="lunch-main">
@@ -24,9 +24,9 @@
     <div class="lunch-card">
       <h3 class="lunch-card-header">Spaghetti Recipe</h3>
       <div class="lunch-image-container">
-        <img src="/images/scrambledeggs.jpg" alt="Picture of a plate of Spaghetti" height="300px" width="300px" >
+        <img src="/images/spaghetti.jpeg" alt="Picture of a plate of Spaghetti" height="300px" width="300px" >
       </div>
-      <button class="button">
+      <button class="lunch-button">
         <a href="/lunch/spaghetti.html">Click here for recipe</a>
       </button>
     </div>
@@ -37,9 +37,9 @@
     <div class="lunch-card">
       <h3 class="lunch-card-header"> Carne Asada Tacos</h3>
       <div class="lunch-image-container">
-        <img src="/images/scrambledeggs.jpg" alt="Picture of a plate of Tacos" height="300px" width="300px" >
+        <img src="/images/tacosingredient8.jpg" alt="Picture of a plate of Tacos" height="300px" width="300px" >
       </div>
-      <button class="button">
+      <button class="lunch-button">
         <a href="/lunch/tacos.html">Click here for recipe</a>
       </button>
     </div>
@@ -49,15 +49,15 @@
     <div class="lunch-card">
       <h3 class="lunch-card-header">Copy Cat McChicken</h3>
       <div class="lunch-image-container">
-        <img src="/images/scrambledeggs.jpg" alt="Picture of a McChicken" height="300px" width="300px" >
+        <img src="/images/chicken-image.jpg" alt="Picture of a McChicken" height="300px" width="300px" >
       </div>
-      <button class="button">
+      <button class="lunch-button">
         <a href="/lunch/chicken-sandwich.html">Click here for recipe</a>
       </button>
     </div>
   </section>
 
-  <footer class="lunch">
+  <footer class="lunch-footer">
     Flexbox Practice 2024. 
   </footer>
 </body>
