--- a/lunch/chicken-sandwich.html
+++ b/lunch/chicken-sandwich.html
@@ -11,6 +11,7 @@
   <header class="chicken-header"> 
     <h1 class="chicken-title">Copy Cat McChicken Recipe</h1>
     <nav  class="chicken-nav">
+      <a href="/index.html">Home</a>
       <a href="/breakfast/breakfast.html">Breakfast</a>
       <a href="/lunch/lunch.html">Lunch</a>
       <a href="/dinner/dinner.html">Dinner</a>
