Final updates. Odin Recipe Project, finished

--- a/dinner/alfredo.html
+++ b/dinner/alfredo.html
@@ -3,29 +3,99 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Shrimp Alfredo Recipe</title>
+  <title>Alfredo Recipe</title>
+  <link rel="stylesheet" href="dinner.css">
 </head>
 <body>
-  <h1>Delicious shrimp alfredo recipe</h1>
-  <p>Elegant but simple, fast and very impressive! Make this for someone you care about, or just a fancy dinner for your self!</p>
-  <ul>
-  <li>1 (12 ounce) package linguine pasta</li>
-  <li>1/4 cup butter, melted</li>
-  <li> 1 cup half and half</li>
-  <li>4 tablespoons diced onion</li>
-  <li>4 teaspoons minced garlic</li>
-  <li>40 small shrimp,peeled and deveined</li>
-  <li>2 teaspoons ground black pepper</li>
-  <li>6 tablespoons grated Parmesan cheese</li>
-  <li>4 sprigs fresh parsley</li>
-  <li>4 slices lemon, garnish.</li>
+<!----Header----->
+<header class="alfredo-header"> 
+  <h1 class="alfredo-title">Fettuccine Alfredo</h1>
+  <nav  class="alfredo-nav">
+    <a href="/breakfast/breakfast.html">Breakfast</a>
+    <a href="/lunch/lunch.html">Lunch</a>
+    <a href="/dinner/dinner.html">Dinner</a>
+  </nav>
+</header>
+<!---Image code-->
+<section class="alfredo-image-container">
+  <img src= "../images/alfredo5.jpg " alt="picture of a plate of  alfredo" class="alfredo-image-content">
+</section>
+<!-----Hero section-->
+<section class="alfredo-hero-container">
+  <h3>Delicious Alfredo</h3>
+  <p class="alfredo-hero-blurb"> Create this fettuccine Alfredo by modifying an italian mother's recipe. You will get nothing but rave reviews when I make this dish. Must warn you, this recipe is not for the health-conscious!
+  </p>
+  <!---Recipe review-->
+  <section class="alfredo-review-container">
+    <p class="alfredo-review-blurb">This rich and creamy fettuccine Alfredo recipe is easy enough for beginner cooks, but it's impressive enough for company. </p>
+    <div class="alfredo-review-section">
+      <span class="alfredo-star1">⭐</span>
+      <span class="alfredo-star2">⭐</span>
+      <span class="alfredo-star3">⭐</span>
+      <span class="alfredo-star4">⭐</span>
+      <span class="alfredo-star5">4.5
+      (4) | </span> 
+      <span class="alfredo-count">4 Reviews |
+      </span> 
+      <span class="alfredo-photos">1  Photo</span>
+    </div>
+  </section>
+</section>
+<!----Prep container-->
+<section class="alfredo-prep-container">
+  <div class="alfredo-prep-content">
+    <p class="alfredo-label-item">Prep Time: </p>
+    <p class="alfredo-prep-item">15 mins</p>
+    <p class="alfredo-label-item">Cook Time: </p>
+    <p class="alfredo-prep-item">15 mins</p>
+    <p class="alfredo-label-item">Total Time: </p>
+    <p class="alfredo-prep-item">30mins  </p>
+    <p class="alfredo-label-item">Servings:</p>
+    <p class="alfredo-prep-item">8</p>
+  </div>
+</section>
+<!-----Ingredients------>
+<div class="alfredo-ingredients-header">
+<h3>Ingredients</h3>
+</div>
+<section class= "alfredo-ingredients-container">
+<p class="alfredo-ingredients-blurb">You'll find a detailed ingredient list and step-by-step instructions in the recipe below. </p>
+  <ul class="alfredo-ingredient-list">
+    <li class="alfredo-ingredient-item" >24 ounces dry fettuccine pasta.</li>
+    <li class="alfredo-ingredient-item" >1 cup butter.</li>
+    <li class="alfredo-ingredient-item">¾ pint heavy cream.</li>
+    <li class="alfredo-ingredient-item" >Salt and pepper to taste.</li>
+    <li class="alfredo-ingredient-item">1 dash garlic salt.</li>
+    <li class="alfredo-ingredient-item">¾ cup grated Romano cheese </li>
+    <li class="alfredo-ingredient-item"> 5 cups shredded mozzarella cheese, divided</li>
   </ul>
-  <h3>Directions</h3>
-  <ul>
-  <li><strong>Step 1</strong> Cook pasta in a large pot of boiling water al-dente, strain. </li>
-  <li><strong>Step 2: </strong> Meanwhile, melt butter, in a large sauce pan. Saute onion and garlic over medium heat until tender. Add shrimp; saute stirring constantly. Stir in half- and half. Cook, stirring constantly, until sauce thickens.</li>
-  <li><strong>Step 3</strong> Place pasta in a serving dish, and cover the shrimp with sauce. Sprinkle black petter and parmesan cheese with parsley and lemon slices. </li>
-
-  </ul>
+</section>
+<div class="alfredo-directions-header">
+<h3>How to make Fettuccine Alfredo</h3>
+</div>
+<section class="alfredo-directions-container">
+<div class="alfredo-directions-content">
+  <h4 class="alfredo-storage">How to store Alfredo</h4>
+  <p class="alfredo-directions-blurb">Store your leftover fettuccine Alfredo in an airtight container for up to three days. Reheat gently in the microwave or on the stove. </p>
+  <p class="alfredo-step-label">Step 1</p>
+  <p class="alfredo-step-description">Gather all ingredients.</p>
+  <img src="/images/alfredo1.jpg" alt="picture of raw alfredo ingredients">
+  <p class="alfredo-step-label">Step 2</p>
+  <p class="alfredo-step-description">Bring a large pot of lightly salted water to a boil. Add fettuccine and cook for 8 to 10 minutes or until al dente; drain.
+  </p>
+  <img src="/images/alfredo2.jpg" alt="picture of alfredo ingredients">
+  <p class="alfredo-step-label">Step 3</p>
+  <p class="alfredo-step-description">Melt butter into cream in a large saucepan over low heat; add salt, pepper, and garlic salt.</p>
+  <img src="/images/alfredo3.jpg" alt="picture of alfredo ingredients">
+  <p class="alfredo-step-label">Step 4</p>
+  <p class="alfredo-step-description">Increase the heat to medium; stir in grated Romano and Parmesan cheese until melted and sauce has thickened.</p>
+  <img src="/images/alfredo4.jpg" alt="picture of alfredo ingredients">
+  <p class="alfredo-step-label">Step 5</p>
+  <p class="alfredo-step-description">Add cooked pasta to sauce and toss until thoroughly coated; serve immediately.</p>
+  <img src="/images/alfredo5.jpg" alt="picture of alfredo ingredients">
+</section>
+<footer class="alfredo-footer">
+<p>FlexBox Practice 2024</p>
+</footer>
 </body>
 </html>
