--- a/dinner/dinner.html
+++ b/dinner/dinner.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Dinner Recipes</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="/style.css">
 </head>
 <body>
   <header class="dinner-main">
@@ -19,46 +19,45 @@
     <h3  class="dinner-recipes-header" > Fancy dinner Recipes</h3>
     <p>With these recipes, you are sure to impress anyone you make them for!</p>
   </section>
-
+<!-----Alfredo Card-->
   <section class="dinner-recipes-container">
     <div class="dinner-card">
       <h3 class="dinner-card-header">Fettuccine Alfredo Recipe</h3>
       <div class="dinner-image-container">
-        <img src="/images/scrambledeggs.jpg" alt="Picture of a plate of Spaghetti" height="300px" width="300px" >
+        <img src="/images/alfredo5.jpg" alt="Picture of a plate of Carbonara" height="300px" width="300px" >
       </div>
-      <button class="button">
+      <button class="dinner-button">
         <a href="/dinner/alfredo.html">Click here for recipe</a>
       </button>
     </div>
   </section>
 
-
-  <section class="lunch-recipes-container">
-    <div class="lunch-card">
-      <h3 class="lunch-card-header">Carbonara Dish Recipe</h3>
-      <div class="lunch-image-container">
-        <img src="/images/scrambledeggs.jpg" alt="Picture of a plate of Spaghetti" height="300px" width="300px" >
+<!------Carbonara Card-->
+  <section class="dinner-recipes-container">
+    <div class="dinner-card">
+      <h3 class="dinner-card-header">Carbonara Dish Recipe</h3>
+      <div class="dinner-image-container">
+        <img src="/images/carbonara.jpg" alt="Picture of a plate of Carbonara" height="300px" width="300px" >
       </div>
-      <button class="button">
+      <button class="dinner-button">
         <a href="/dinner/carbonara.html">Click here for recipe</a>
       </button>
     </div>
   </section>
-
-  
-  <section class="lunch-recipes-container">
-    <div class="lunch-card">
-      <h3 class="lunch-card-header">Steak Dinner</h3>
-      <div class="lunch-image-container">
-        <img src="/images/scrambledeggs.jpg" alt="Picture of a plate of Spaghetti" height="300px" width="300px" >
+  <!----Steak Card-->
+  <section class="dinner-recipes-container">
+    <div class="dinner-card">
+      <h3 class="dinner-card-header"> Ribeye Steak Dinner</h3>
+      <div class="dinner-image-container">
+        <img src="/images/steak1.jpg" alt="Picture of a plate of Spaghetti" height="300px" width="300px" >
       </div>
-      <button class="button">
+      <button class="dinner-button">
         <a href="/dinner/steak.html">Click here for recipe</a>
       </button>
     </div>
   </section>
 
-  <footer class="dinner-page-footer">
+  <footer class="dinner-footer">
     Flexbox Practice 2024. 
   </footer>
 </body>
